--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "ejs": "^2.4.2",
-    "envify": "^3.4.1",
     "express": "~4.13.4",
     "express-expose": "^0.3.4",
     "express-session": "^1.13.0",
@@ -34,6 +33,7 @@
     "googleapis": "^9.0.0",
     "gulp": "^3.9.1",
     "gulp-livereload": "^3.8.1",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-ng-config": "^1.3.1",
     "gulp-sass": "^2.3.2",
     "http": "0.0.0",
@@ -44,6 +44,7 @@
     "oauth": "^0.9.14",
     "request": "^2.72.0",
     "serve-favicon": "~2.3.0",
+    "uglifyify": "^3.0.2",
     "vinyl-source-stream": "^1.1.0"
   },
   "browser": {
