--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-ng-annotate": "^2.0.0",
     "gulp-ng-config": "^1.3.1",
     "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0",
     "http": "0.0.0",
     "https": "^1.0.0",
     "jquery": "^3.0.0",
@@ -44,6 +45,7 @@
     "oauth": "^0.9.14",
     "request": "^2.72.0",
     "serve-favicon": "~2.3.0",
+    "streamify": "^0.2.6",
     "uglifyify": "^3.0.2",
     "vinyl-source-stream": "^1.1.0"
   },
