--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "angular-animate": "^1.5.7",
     "angular-cookies": "^1.5.7",
     "angular-moment": "^1.0.0-beta.6",
+    "angular-qrcode": "^6.2.1",
     "angular-route": "^1.5.7",
     "angular-sanitize": "^1.5.7",
     "angularfire": "^2.0.1",
@@ -41,6 +42,7 @@
     "morgan": "~1.7.0",
     "normalize.css": "^4.2.0",
     "oauth": "^0.9.14",
+    "qrcode-generator": "^1.0.3",
     "request": "^2.72.0",
     "serve-favicon": "~2.3.0",
     "uglifyify": "^3.0.2",
