--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express-session": "^1.13.0",
     "feedly": "^0.1.6",
     "feedly-node": "0.0.1",
-    "firebase": "^3.2.0",
+    "firebase": "^3.5.2",
+    "firebase-admin": "^4.0.0",
     "font-awesome": "^4.6.3",
     "google-auth-library": "^0.9.8",
     "googleapis": "^9.0.0",
