--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "angular-route": "^1.5.7",
     "angular-sanitize": "^1.5.7",
     "angularfire": "^2.0.1",
-    "artyom.js": "^1.0.1",
+    "artyom.js": "iamnickvolpe/artyom.js",
     "body-parser": "~1.15.1",
     "browserify": "^13.0.1",
     "browserify-shim": "^3.8.12",
